fix missing div

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <label for="email">Email</label>
         </div>
         <div class="input-field col s6">
-          <input id="password" type="tel" class="validate">
+          <input id="password" type="text" class="validate">
           <label for="password">Password</label>
         </div>
       </div>
@@ -79,6 +79,7 @@
 		</div>
 	  
   </div>
+	</div>
 
 
   <div class="container">
