--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
   <link href="Materialize/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	
 <!---------INIT FIREBASE--------->
-	<script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.8.3/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBDcv-R4m9eVyCTj40JRVU3THcIh6sTjPQ",
-    authDomain: "webauthmockup.firebaseapp.com",
-    databaseURL: "https://webauthmockup.firebaseio.com",
-    projectId: "webauthmockup",
-    storageBucket: "webauthmockup.appspot.com",
-    messagingSenderId: "815625594433"
+    apiKey: "AIzaSyCQ2mHPhkjR_XYZUDkxX4TcayfQstVoFFs",
+    authDomain: "webauthmockup2.firebaseapp.com",
+    databaseURL: "https://webauthmockup2.firebaseio.com",
+    projectId: "webauthmockup2",
+    storageBucket: "webauthmockup2.appspot.com",
+    messagingSenderId: "389118810937"
   };
   firebase.initializeApp(config);
 </script>
 <!------Firebase Auth------>
-	<script src="Firebase/auth.js"></script>
 	
 </head>
 <body>
@@ -140,6 +139,8 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="Materialize/js/materialize.js"></script>
   <script src="Materialize/js/init.js"></script>
+		<script src="Firebase/auth.js"></script>
+
 
   </body>
 </html>
